welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:28: error: Invalid literal number
   	for (x<- 1to 4){
                 ^FlowerPot:35: error: ')' expected but '}' found.
}
^